--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "cordova-plugin-idfa",
-  "version": "2.0.0",
+  "version": "2.0.0-dev-1.0",
   "description": "Cordova plugin for getting Advertising ID (IDFA or AAID)",
   "types": "./types/index.d.ts",
   "cordova": {
     "id": "cordova-plugin-idfa",
     "platforms": [
-      "ios",
-      "android"
+      "ios"
     ]
   },
   "repository": {
@@ -25,11 +24,8 @@
     "cordova",
     "IFA",
     "IDFA",
-    "AAID",
-    "Advertising ID",
     "analytics",
     "ecosystem:cordova",
-    "cordova-android",
     "cordova-ios"
   ],
   "scripts": {
